--- a/src/components/cocktails-list-component/CocktailsListComponent.html
+++ b/src/components/cocktails-list-component/CocktailsListComponent.html
@@ -13,9 +13,11 @@
     >
       <b-card-text>
         {{ cocktail[0].strInstructions }}
-      </b-card-text>
-      <b-card-text>
-        {{ buildUpIngredients(cocktail[0]) }}
+        <ul class="mt-3">
+          <li v-for="(ingredient) in buildUpIngredients(cocktail[0])">
+            {{ ingredient }}
+          </li>
+        </ul>
       </b-card-text>
     </b-card>
     </div>
